--- a/index.html
+++ b/index.html
@@ -33,75 +33,6 @@
     <title>CONSOLE</title>
   </head>
 <body>
-    <script>
-        const delay = (time) => new Promise(resolve => setTimeout(resolve, time));
-        $('body').terminal({
-            hello: function(what) {
-                this.echo('Hello, ' + what +
-                          '. Wellcome to this terminal.');
-            },
-            help: function() {
-                this.echo('618 Console Help')
-                this.echo('\nhelp - Displays a list of commands')
-                this.echo('\ndir - Lists current directory contents')
-                this.echo('\nconnect - Connect to a specified IP Address')
-                this.echo('\nopen - Opens specified file (Only usuable on .txt)\n')
-            },
-            ping: function() {
-                this.echo('Pong!')
-            },
-            connect: async function(IP){
-                this.echo('Connecting to ' + IP);
-                for (let i = 0; i < 4; ++i) {
-                    await delay(1000);
-                    if (i == 3){}
-                    else{
-                        this.echo('.', { newline: false });
-                    }
-                }
-                    this.echo('Failed to connect to ' + IP + ' - Error 403 - Forbidden');
-                },
-            dir: function(){
-                this.echo(' Volume in drive C is JHarvey.uk')
-                this.echo(' Volume Serial Number is 618J-HRBJ')
-                this.echo('')
-                this.echo(' Directory of C:/JHarvey.uk/618')
-                this.echo('')
-                this.echo('06/11/2023   13:56     <DIR>         .')
-                this.echo('06/11/2023   13:56     <DIR>         ..')
-                this.echo('01/01/2023   00:01               1,300 README.txt')
-                this.echo('                1 File(s)        1,300 bytes')
-                this.echo('                2 Dir(s) 114,613,387,264 bytes free')
-                this.echo('')
-            },
-            open: async function(file){
-                switch(file){
-                    case 'readme.txt':
-                        this.echo('Hello.')
-                        this.echo('')
-                        this.echo('If you are reading this, you shouldn\'t be. You have found the 618 Console, the mainframe of JHarvey.uk and it\'s pages.')
-                        this.echo('You should leave this page, and forget what you\'ve seen.')
-                        this.echo('- J')
-                        this.echo('')
-                        for (let i = 0; i < 4; ++i) {
-                            await delay(1000);
-                            this.echo('.')
-                        }
-                        this.echo('FILE CORRUPTION FOUND, DUMPING')
-                        for (let i = 0; i < 4; ++i) {
-                            await delay(1000);
-                            this.echo('.')
-                        }
-                        this.echo('oûl†[˜/üzr[<$yq*â³¾év¤‘)ýožkõàö©yð±&™¨âkáwKy«è”ñ.ÿ1·ãµ|¹à‡y5uyEà¯¡ (…jªð1ñ¡—ÿEúðešw•zw ¥ò½«äïl¢±Póò¦j¶±ô¢?jv&å¡wµmy<05åéùu=…~tx«ö¾³ô5ïøgj­à°‘ã†è2¼.#êë€')
-                        this.echo('%òúv`2›g,§ò¿*ïuG¼¸•šˆ÷t/ïo¥onèr>°øíûbøçâ©Oæ’£kó°uö9/*žîõðä¿úwmInin#l’iö«%Níõìv¶+™®hééúwü_~é~²k“Gö@“8ë} ®‡r4cqòãê«ågîþøãí^žx#óc `íìÿé^™mû7ê)ÿ zªœõú¦¾ãxk±g²5©†ÿ=ïb¨qø')
-                    default:
-                        this.echo('File not found.')
-                }
-            }
-        }, {
-            greetings: 'JHarvey.UK | 618 Console | Copyright AWE Design 2023-24 | Version 1.864\nType "help" for a list of commands',
-            prompt: 'C:/JHarvey.uk/618>'
-        });
-        </script>
+    <h1>Hello World</h1>
 </body>
 </html>
