--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             .footerimg2 { display: none; }  
         }
         body {
-            font-family: "Lucida Console", "Courier New", monospace;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #00220b;
         }
         .terminal {
@@ -30,7 +30,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>CONSOLE</title>
+    <title>UI/UX Interface</title>
   </head>
 <body>
     <h1>Hello World</h1>
