--- a/index.html
+++ b/index.html
@@ -9,18 +9,199 @@
     <meta name="robots" content="index">
     <meta name="robots" content="follow">
     <style>
+        
         @media screen and (max-width: 600px) { 
             .footerimg2 { display: none; }  
         }
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #00220b;
+            background-color: #333;
         }
-        .terminal {
-    --color: #ffffff;
-    --background: rgb(0, 60, 0);
-    --link-color: darkblue;
-}
+
+        .btn {
+            font-family: Arial Black;
+            width: 200px;
+            height: 250px;
+            text-decoration: underline;
+            color: white;
+            border-radius: 12px;
+            padding: 10px 18px;
+            white-space: nowrap;
+            display: inline-block;
+            vertical-align: middle;
+            text-align: center;
+            background-origin: padding-box;
+            position: relative;
+            border: solid #3A3B3C;
+            margin: 7px;
+            cursor: pointer;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        li {
+            float: left;
+        }
+
+            li a {
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+            li b {
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                user-select: none;
+                -moz-user-select: none;
+                -khtml-user-select: none;
+                -webkit-user-select: none;
+                -o-user-select: none;
+            }
+
+        p b {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            user-select: none;
+            -moz-user-select: none;
+            -khtml-user-select: none;
+            -webkit-user-select: none;
+            -o-user-select: none;
+        }
+
+        a.contact{
+            color: white;
+        }
+
+        li a:hover {
+            background-color: #055c00;
+        }
+
+        p c {
+            display: block;
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            color: white;
+            text-align: right;
+            margin-right: 30px;
+        }
+
+        .navbar {
+            overflow: hidden;
+            background-color: #d7f777;
+            height: 75px;
+            width: 100vw;
+            left: 0;
+        }
+
+            .navbar a img {
+                background-color: #d7f777;
+                font-size: 16px;
+                color: white;
+                text-align: center;
+                padding: 25px 16px;
+                border:0;
+                text-decoration: none;
+                justify-content: right;
+            }
+
+            .navbar a2 {
+                float: right;
+                font-size: 16px;
+                color: white;
+                text-align: right;
+                padding: 28px 16px;
+                text-decoration: none;
+            }
+
+            .navbar a.clickables{
+                float: right;
+                font-size: 16px;
+                color: black;
+                text-align: right;
+                padding: 28px 16px;
+            }
+
+            .navbar a:hover,
+            .dropdown:hover .dropbtn {
+                background-color: #1d4cf2;
+                color: white;
+                height: auto;
+                width: auto;
+            }
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100vw;
+            background-color:#003264;
+            color: white;
+            text-align: center;
+        }
+        .footer i {
+            width:75vw;
+            display: inline-block;
+        }
+
+        .footerimg {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            background-color: transparent;
+            color: white;
+            text-align: left;
+        }
+
+        .footerimg2 {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            background-color: transparent;
+            color: white;
+            padding: 10px 10px;
+            text-align: right;
+        }
+        p {
+            color:white;
+        }
+
+        h1 {
+           color:white; 
+        }
+        body{
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+
+        .logo{
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+
+        hr {
+            display: block;
+            height: 0px;
+            border: 0;
+            border: 2px solid #ffffff;
+            margin: 0;
+        }
 
     </style>
     <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
@@ -30,9 +211,31 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>UI/UX Interface</title>
+    <div class="navbar" id="navbarid">
+        <a class="img" href="/">
+            <img alt="PSSST" src="Pssst24.png" width="100" height="25">
+        </a>
+        <a class="clickables" href="/contact">Contact</a>
+        <a class="clickables" href="/portfolio">Portfolio</a>
+        <a class="clickables" href="/about">About</a>
+      </div>
+    <title>UI/UX Interface - PSSST</title>
   </head>
 <body>
-    <h1>Hello World</h1>
+    <div style="margin-left:5%;padding:1px;height:100px;">
+        <h1>Welcome to PSSST</h1>
+        <p>The new home for Personal Supervisor to Student communication and interaction.</p>
+        <p></p>
+        <p>Please note that PSSST is currently in closed pre-alpha. Features may be unavailable or may display default values.</p>
+        <p>We are not accepting bug reports at this time.</p>
+        <p></p>
+        <p>PSSST is a mock product created by Jack Harvey, acting as BOLD Design.</p>
+    </div>
+    <footer>
+        <div class="footer" id="footer">
+          <p>A <a class="contact" href="/">BOLD</a> Website</p>
+          <img class="footerimg2" alt="JMH LOGO" src="BOLDw.png" width="75" height="25">
+        </div>
+      </footer>
 </body>
 </html>
