--- a/appointments.html
+++ b/appointments.html
@@ -176,13 +176,11 @@
             padding: 10px 10px;
             text-align: right;
         }
-        p {
-            color:white;
-        }
 
-        h1 {
+        h1, h2, h3, h4, h5, h6, p {
            color:white; 
         }
+
         body{
             margin: 0;
             padding: 0;
@@ -216,19 +214,57 @@
             <img alt="PSSST" src="Pssst24.png" width="100" height="25">
         </a>
         <a class="clickables" href="/appointments.html">Appointments</a>
-      </div>
+    </div>
     <title>UI/UX Interface - PSSST</title>
   </head>
 <body>
     <div style="margin-left:5%;padding:1px;height:100px;">
-        <h1>Welcome to PSSST</h1>
-        <p>The new home for Personal Supervisor to Student communication and interaction.</p>
-        <p></p>
-        <p>Please note that PSSST is currently in closed pre-alpha. Features may be unavailable or may display default values.</p>
-        <p>We are not accepting bug reports at this time.</p>
-        <p></p>
-        <p>PSSST is a mock product created by Jack Harvey, acting as BOLD Design.</p>
+        <h1>Book an appointment</h1>
+        <h2>Please select your personal Supervisor below:</h2>
+        <p>NOTE: Only Dr Chandrasekhar Kambhampati has agreed to use PSSST during pre-alpha, no other supervisors are using PSSST at this time.</p>
+        <p>Supervisor: <select name="supervisors" id="sups" onchange="supchange()">
+            <option value="">Select...</option>
+            <option value="Dr Chandrasekhar Kambhampati">Dr Chandrasekhar Kambhampati</option>
+        </select></p>
+        <p id="selsups"></p>
+        <select id="days" onchange="datechange()">
+            <option value="">Select...</option>
+        </select>
+        <p id="selday"></p>
+        <select id="time" onchange="timechange()">
+            <option value="">Select...</option>
+        </select>
+        <p id="overall"></p>
     </div>
+    <script>function supchange() {
+        var sup = document.getElementById("sups").value;
+        document.getElementById("selsups").innerHTML = "You have selected: " + sup;
+        setTimeout(() => {
+            document.getElementById("days").options.add(new Option("Monday 20th May", "Monday 20th May")),
+            document.getElementById("days").options.add(new Option("Tuesday 21st May", "Tuesday 21st May")),
+            document.getElementById("days").options.add(new Option("Wednesday 22nd May", "Wednesday 22nd May")),
+            document.getElementById("days").options.add(new Option("Thursday 23rd May", "Thursday 23rd May")),
+            document.getElementById("days").options.add(new Option("Friday 24th May", "Friday 24th May"))
+        }, 500)
+    }
+
+    function datechange() {
+        var day = document.getElementById("days").value;
+        document.getElementById("selday").innerHTML = "You have selected: " + day;
+        setTimeout(() => {
+            document.getElementById("time").options.add(new Option("10:30 - 11:00", "10:30 - 11:00")),
+            document.getElementById("time").options.add(new Option("14:00 - 14:30", "14:00 - 14:30")),
+            document.getElementById("time").options.add(new Option("16:15 - 16:45", "16:15 - 16:45"))
+        }, 500)
+    }
+
+    function timechange() {
+        var sup = document.getElementById("sups").value;
+        var day = document.getElementById("days").value;
+        var time = document.getElementById("time").value;
+        document.getElementById("overall").innerHTML = "Your appointment is as follows:" + "<br />" +"Supervisor: " + sup + "<br />" + " Date: " + day + "<br />" + "Time: " + time + "<br />" + "Location: Teams ";
+    }
+    </script>
     <footer>
         <div class="footer" id="footer">
           <p>A <a class="contact" href="/">BOLD</a> Website</p>
@@ -236,4 +272,3 @@
         </div>
       </footer>
 </body>
-</html>
