Testing out php for form movement

--- a/appointments.html
+++ b/appointments.html
@@ -215,7 +215,7 @@
         </a>
         <a class="clickables" href="/appointments.html">Appointments</a>
     </div>
-    <title>UI/UX Interface - PSSST</title>
+    <title>UI/UX Interface - PSSST - Appointments</title>
   </head>
 <body>
     <div style="margin-left:5%;padding:1px;height:100px;">
@@ -235,7 +235,7 @@
             <option value="">Select...</option>
         </select></p>
         <p id="overall"></p>
-        <form action="/#" method="get" id="mover">
+        <form action="/confirmation.php" method="get" id="mover">
             <label hidden id="CAPTCHA" for="CAPTCHA">CAPTCHA:</label>
             <input hidden type="text" id="CAPTCHAbox" name="CAPTCHA" onchange="captcha()"><br><br>
             <input hidden id="submit" type="submit" value="Submit">
