--- a/appointments.html
+++ b/appointments.html
@@ -235,7 +235,7 @@
             <option value="">Select...</option>
         </select></p>
         <p id="overall"></p>
-        <form action="/confirmation.php" method="get" id="mover">
+        <form action="/confirmation" method="get" id="mover">
             <label hidden id="CAPTCHA" for="CAPTCHA">CAPTCHA:</label>
             <input hidden type="text" id="CAPTCHAbox" name="CAPTCHA" onchange="captcha()"><br><br>
             <input hidden id="submit" type="submit" value="Submit">
