--- a/confirmation.html
+++ b/confirmation.html
@@ -221,9 +221,9 @@
     <div style="margin-left:5%;padding:1px;height:100px;">
         <h1>Appointment Booked</h1>
         <h2>Your Appointment details are below:</h2>
-        <p>Supervisor:<span id="sup"></span></p>
-        <p>Date:<span id="date"></span></p>
-        <p>Time:<span id="time"></span></p>
+        <p>Supervisor:<p id="sup"></p></p>
+        <p>Date:<p id="date"></p></p>
+        <p>Time:<p id="time"></p></p>
     </div>
     <script>
         //displaying the value from local storage to another page by their respective Ids
