--- a/confirmation.html
+++ b/confirmation.html
@@ -227,9 +227,9 @@
     </div>
     <script>
     function setdata() {
-        document.getElementById("sup").innerHTML= $localStorage.getItem("txtValue");
-        document.getElementById("date").innerHTML= $localStorage.getItem("txtValue1");
-        document.getElementById("time").innerHTML= $localStorage.getItem("txtValue2");
+        document.getElementById("sup").innerHTML= "" + localStorage.getItem("txtValue");
+        document.getElementById("date").innerHTML= "" + localStorage.getItem("txtValue1");
+        document.getElementById("time").innerHTML= "" + localStorage.getItem("txtValue2");
     }
     </script>
     <footer>
