Maybe this one?

--- a/appointments.html
+++ b/appointments.html
@@ -282,9 +282,9 @@
         var supervisor = document.getElementById("supervisors").value;
         var day = document.getElementById("days").value; 
         var time = document.getElementById("time").value;
-        localStorage.setItem("txtValue", supervisor);
-        localStorage.setItem("txtValue1", day);
-        localStorage.setItem("txtValue3", time); 
+        localStorage.setItem("sup", supervisor);
+        localStorage.setItem("day", day);
+        localStorage.setItem("time", time); 
     }
     </script>
     <footer>
