Okay maybe this?

--- a/appointments.html
+++ b/appointments.html
@@ -279,10 +279,10 @@
     }
 
     function getInfo(){
-        var supervisor = document.getElementById("supervisors").value;
-        var day = document.getElementById("days").value; 
+        var sup = document.getElementById("sups").value;
+        var day = document.getElementById("days").value;
         var time = document.getElementById("time").value;
-        localStorage.setItem("sup", supervisor);
+        localStorage.setItem("sup", sup);
         localStorage.setItem("day", day);
         localStorage.setItem("time", time); 
     }
