Login page/confirmation page created

--- a/login.html
+++ b/login.html
@@ -177,7 +177,7 @@
             text-align: right;
         }
 
-        h1, h2, h3, h4, h5, h6, p {
+        h1, h2, h3, h4, h5, h6, p, form {
            color:white; 
         }
 
@@ -213,27 +213,26 @@
         <a class="img" href="/">
             <img alt="PSSST" src="Pssst24.png" width="100" height="25">
         </a>
-        <a class="clickables" href="/appointments.html">Appointments</a>
+        <a class="clickables" href="/login.html">Login</a>
     </div>
-    <title>UI/UX Interface - PSSST - Confirmation</title>
+    <title>UI/UX Interface - PSSST - Login</title>
   </head>
-<body onload="setdata();">
+<body>
     <div style="margin-left:5%;padding:1px;height:100px;">
-        <h1>Appointment Booked</h1>
-        <h2>Your Appointment details are below:</h2>
-        <p>Supervisor:<span id="sup"></span></p>
-        <p>Date:<span id="date"></span></p>
-        <p>Time:<span id="time"></span></p>
+        <h1>Login</h1>
+        <p>NOTE: PSSST has no access to the University of Hull's logon servers, please log into your account as usual. No data is saved.</p>
+        <form action="/loggedin.html" id="mover">
+            <label id="username" for="usern">Student Number:</label>
+            <input type="text" id="usern" name="usern"><br><br>
+            <label id="username" for="usern">Password:</label>
+            <input type="password" id="psw" name="psw"><br><br>
+            <input id="submit" type="submit" value="Submit" onclick="getInfo()">
+        </form>
     </div>
     <script>
-    function setdata() {
-        document.getElementById("sup").innerHTML= " " + localStorage.getItem("sup");
-        document.getElementById("date").innerHTML= " " + localStorage.getItem("day");
-        document.getElementById("time").innerHTML= "" + localStorage.getItem("time");
-    }
-    function setuser() {
-        document.getElementById("sup").innerHTML= " " + localStorage.getItem("sup");
-        document.getElementById("date").innerHTML= " " + localStorage.getItem("day");
+    function getInfo(){
+        var usrn = document.getElementById("usern").value;
+        localStorage.setItem("usern", usrn);
     }
     </script>
     <footer>
