--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <a class="img" href="/">
             <img alt="PSSST" src="Pssst24.png" width="100" height="25">
         </a>
-        <a class="clickables" href="/appointments.html">Appointments</a>
+        <a class="clickables" href="/login.html">Login</a>
       </div>
     <title>UI/UX Interface - PSSST</title>
   </head>
