standardised naming should fix bug.

--- a/login.html
+++ b/login.html
@@ -222,8 +222,8 @@
         <h1>Login</h1>
         <p>NOTE: PSSST has no access to the University of Hull's logon servers, please log into your account as usual. No data is saved.</p>
         <form action="/loggedin.html" id="mover">
-            <label id="usrn" for="usern">Student Number:</label>
-            <input type="text" id="user" name="usern"><br><br>
+            <label id="user" for="user">Student Number:</label>
+            <input type="text" id="user" name="user"><br><br>
             <label id="psw" for="password">Password:</label>
             <input type="password" id="psw" name="password"><br><br>
             <input id="submit" type="submit" value="Submit" onclick="getInfo()">
