--- a/login.html
+++ b/login.html
@@ -231,7 +231,7 @@
     </div>
     <script>
     function getInfo(){
-        var user = document.getElementById("usrn").value;
+        var user = document.getElementById("user").value;
         localStorage.setItem("user", user);
     }
     </script>
