Forgot the JS call.

--- a/loggedin.html
+++ b/loggedin.html
@@ -217,7 +217,7 @@
     </div>
     <title>UI/UX Interface - PSSST - Logged In</title>
   </head>
-<body>
+<body onload="setdata();">
     <div style="margin-left:5%;padding:1px;height:100px;">
         <h1>Logged in.</h1>
         <p>Your Student Number:<span id="user"></span></p>
