FINAL FEATURE RELEASE

--- a/login.html
+++ b/login.html
@@ -221,7 +221,7 @@
     <div style="margin-left:5%;padding:1px;height:100px;">
         <h1>Login</h1>
         <p>NOTE: PSSST has no access to the University of Hull's logon servers, please log into your account as usual. No data is saved.</p>
-        <p><b STYLE="color: red;">WARNING: PASSWORD WILL BE IN PLAIN CHARACTERS.</i></b></p>
+        <p><b STYLE="color: red;">WARNING: PASSWORD WILL BE IN PLAIN CHARACTERS ON WEBSITE URL.</b></p>
         <form action="/loggedin.html">
             <label id="usern" for="user">Student Number:</label>
             <input type="text" id="user" name="user"><br><br>
