--- a/confirmation.html
+++ b/confirmation.html
@@ -224,12 +224,22 @@
         <p>Supervisor:<span id="sup"></span></p>
         <p>Date:<span id="date"></span></p>
         <p>Time:<span id="time"></span></p>
+        <form>
+            <label hidden id="feedback" for="feedback">Meeting Feedback:</label>
+            <input id="feedback" type="text"></input>
+            <input id="submit" type="submit" value="Submit" onclick="feedback()">
+            <P id="thanks" hidden>Thank you for your feedback!</P>
+        </form>
     </div>
     <script>
     function setdata() {
         document.getElementById("sup").innerHTML= " " + localStorage.getItem("sup");
         document.getElementById("date").innerHTML= " " + localStorage.getItem("day");
         document.getElementById("time").innerHTML= "" + localStorage.getItem("time");
+    }
+
+    function feedback(){
+        document.getElementById("thanks").removeAttribute('hidden')
     }
     </script>
     <footer>
