--- a/confirmation.html
+++ b/confirmation.html
@@ -228,7 +228,7 @@
             <label id="feedback" for="feedback">Meeting Feedback:</label>
             <input id="feedback" type="text"></input>
             <input id="submit" type="submit" value="Submit" onclick="feedback()">
-            <P hidden id="thanks">Thank you for your feedback!</P>
+            <P hidden style="size: 100px;"id="thanks">Thank you for your feedback!</P>
         </form>
     </div>
     <script>
