--- a/confirmation.html
+++ b/confirmation.html
@@ -225,10 +225,10 @@
         <p>Date:<span id="date"></span></p>
         <p>Time:<span id="time"></span></p>
         <form>
-            <label id="feedback" for="feedback">Meeting Feedback:</label>
-            <input id="feedback" type="text"></input>
+            <label style="color: white;" id="feedback" for="feedback">Meeting Feedback:</label>
+            <input style="size: 100px;" id="feedback" type="text"></input>
             <input id="submit" type="submit" value="Submit" onclick="feedback()">
-            <p hidden style="size: 100px;"id="thanks">Thank you for your feedback!</P>
+            <p hidden id="thanks">Thank you for your feedback!</P>
         </form>
     </div>
     <script>
