--- a/confirmation.html
+++ b/confirmation.html
@@ -226,7 +226,7 @@
         <p>Time:<span id="time"></span></p>
         <form>
             <label style="color: white;" id="feedback" for="feedback">Meeting Feedback:</label>
-            <input style="size: 100px;" id="feedback" type="text"></input>
+            <input style="height: 100px;" id="feedback" type="text"></input>
         </form>
         <button id="submit" value="Submit" onclick="feedback()">Submit</button>
         <p hidden id="thx">Thank you for your feedback!</p>
