Favicons + Local HTML support

--- a/appointments.html
+++ b/appointments.html
@@ -205,15 +205,15 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.css"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <div class="navbar" id="navbarid">
-        <a class="img" href="/">
+        <a class="img" href="./index.html">
             <img alt="PSSST" src="Pssst24.png" width="100" height="25">
         </a>
-        <a class="clickables" href="/appointments.html">Appointments</a>
+        <a class="clickables" href="./appointments.html">Appointments</a>
     </div>
     <title>UI/UX Interface - PSSST - Appointments</title>
   </head>
@@ -235,7 +235,7 @@
             <option value="">Select...</option>
         </select></p>
         <p id="overall"></p>
-        <form action="/confirmation.html" id="mover">
+        <form action="./confirmation.html" id="mover">
             <label hidden id="CAPTCHA" for="CAPTCHA">CAPTCHA:</label>
             <input hidden type="text" id="CAPTCHAbox" name="CAPTCHA" onchange="captcha()"><br><br>
             <input hidden id="submit" type="submit" value="Submit" onclick="getInfo()">
@@ -289,7 +289,7 @@
     </script>
     <footer>
         <div class="footer" id="footer">
-          <p>A <a class="contact" href="/">BOLD</a> Website</p>
+          <p>A <a class="contact" href="./index.html">BOLD</a> Website</p>
           <img class="footerimg2" alt="JMH LOGO" src="BOLDw.png" width="75" height="25">
         </div>
       </footer>
