--- a/login.html
+++ b/login.html
@@ -205,15 +205,15 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.css"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <div class="navbar" id="navbarid">
-        <a class="img" href="/">
+        <a class="img" href="./index.html">
             <img alt="PSSST" src="Pssst24.png" width="100" height="25">
         </a>
-        <a class="clickables" href="/login.html">Login</a>
+        <a class="clickables" href="./login.html">Login</a>
     </div>
     <title>UI/UX Interface - PSSST - Login</title>
   </head>
@@ -222,7 +222,7 @@
         <h1>Login</h1>
         <p>NOTE: PSSST has no access to the University of Hull's logon servers, please log into your account as usual. No data is saved.</p>
         <p><b STYLE="color: red;">WARNING: PASSWORD WILL BE IN PLAIN CHARACTERS ON WEBSITE URL.</b></p>
-        <form action="/loggedin.html">
+        <form action="./loggedin.html">
             <label id="usern" for="user">Student Number:</label>
             <input type="text" id="user" name="user"><br><br>
             <label id="psw" for="password">Password:</label>
@@ -238,7 +238,7 @@
     </script>
     <footer>
         <div class="footer" id="footer">
-          <p>A <a class="contact" href="/">BOLD</a> Website</p>
+          <p>A <a class="contact" href="./index.html">BOLD</a> Website</p>
           <img class="footerimg2" alt="JMH LOGO" src="BOLDw.png" width="75" height="25">
         </div>
       </footer>
