--- a/loggedin.html
+++ b/loggedin.html
@@ -213,7 +213,7 @@
         <a class="img" href="./index.html">
             <img alt="PSSST" src="Pssst24.png" width="100" height="25">
         </a>
-        <a class="clickables" href="./appointments.html">Appointment</a>
+        <a class="clickables" href="./appointments.html">Appointments</a>
     </div>
     <title>UI/UX Interface - PSSST - Logged In</title>
   </head>
